[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wauldo"
version = "0.1.1"
description = "Official Python SDK for Wauldo — Verified AI answers from your documents"
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
    {name = "Wauldo Team", email = "contact@wauldo.com"}
]
keywords = ["ai", "llm", "openai", "privacy", "gdpr", "chatgpt", "api", "rapidapi", "nlp", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://wauldo.com"
Documentation = "https://wauldo.com/docs"
Repository = "https://github.com/wauldoai/wauldo-sdk-python"
"Bug Tracker" = "https://github.com/wauldoai/wauldo-sdk-python/issues"
RapidAPI = "https://rapidapi.com/binnewzzin/api/smart-rag-api"
Source = "https://github.com/wauldoai/wauldo-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/wauldo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]
